# animeflv-caster

./: pyproject.toml
src/: scraper-test.py
