[tool.poetry]
name = "crawler"
version = "0.0.1"
description = ""
authors = ["stark <stark9337@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cloudscraper = "^1.2.58"
bs4 = "^0.0.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
